@startuml
entity CustomerAdress {
  **PK** CustomerAdress_id
  --
  City
  Street
  House_number
}

entity Contacts {
  **PK** Phone_number
  --
  Email
}

entity Customer {
  **PK** Customer_id
  --
  Name
  **FK** Flat_id
  **FK** CustomerAdress_id
  **FK** Phone_number
}

entity Flat {
  **PK** Flat_id
  --
  Rooms_count
  Residents_count
  **FK** Vault_id
}

entity Furniture {
  **PK** Furniture_id
  --
  Name
  Price
  **FK** Flat_id
}

entity Vault {
  **PK** Vault_id
  --
  **FK** Location_id
}

entity Location {
  **PK** Location_id
  --
  Latitude
  Longitude
}

CustomerAdress ||--|| Customer
Contacts ||--|| Customer
Customer }|--|| Flat
Flat ||--{ Furniture
Flat }|--|| Vault
Vault ||--|| Location
@enduml